<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/doc_bg"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".tokentax">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/textView36"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:text="@string/token_instructions"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="86dp" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/token_pg"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="86dp" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:background="@drawable/token_doc"
            android:padding="30dp">

        </ImageView>

        <Button
            android:id="@+id/button26"
            android:layout_width="110dp"
            android:layout_height="38dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_rounded"
            android:text="@string/apply_form"
            android:textColor="#ffffff"
            android:textStyle="bold">

        </Button>

    </LinearLayout>


</ScrollView>